# local_transcribe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: CLAUDE.md
src/transcribe/: CLAUDE.md  cli.py  config.py  diarizer.py  formatter.py  hallucination.py  pipeline.py  preprocess.py  transcriber.py
