[project]
name = "praecipio-local-transcribe"
version = "0.1.0"
description = "Local audio transcription with speaker diarization for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1",
    "mlx-whisper>=0.4",
    "speechbrain>=1.0",
    "torch>=2.0",
    "torchaudio>=2.0",
    "scikit-learn>=1.4",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.26",
]

[project.scripts]
transcribe = "transcribe.cli:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
